--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
     "vue": "^2.5.9",
+    "vue-chartjs": "^3.0.2",
     "vuex": "^3.0.1"
   }
 }
