--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chart.js": "^2.7.1",
     "vue": "^2.5.9",
     "vue-chartjs": "^3.0.2",
+    "vue-clazy-load": "^0.3.0",
     "vuex": "^3.0.1"
   }
 }
